syntax = "proto3";
package pb_operations;

// Specific target ID or name for listener, agent, implant, etc.
message Target {
    string id_or_name = 1;
}

message NewListener {
    string name = 1;
    string domains = 2;
    string protocol = 3;
    string host = 4;
    string port = 5;
}

message NewImplant {
    string name = 1;
    string url = 2;
    string os = 3;
    string arch = 4;
    string format = 5;
    int64 sleep = 6;
    int64 jitter = 7;
    string user_agent = 8;
    string killdate = 9;
}

message NewOperator {
    string name = 1;
}